<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

	<string name="app_name">Boxee Thumb Remote</string>
	
	<string name="server_is_playing">Playing: <xliff:g id="title">%s</xliff:g></string>
	<string name="server_is_paused">Paused: <xliff:g id="title">%s</xliff:g></string>
	
	<string name="not_connected">Not connected</string>
	<string name="connected_to">Boxee @ <xliff:g id="serverName">%s</xliff:g></string>
	<!-- settings -->
	<string name="custom_server">Custom server&#8230;</string>
	<string name="host_title">Host</string>
	<string name="port_title">Port</string>
	<string name="clear_custom_server">Clear</string>
	
	<string name="ux_group">UX Settings</string>
	
	<string name="preference_sensitivity">Swipe sensitivity</string>
	<string name="preference_sensitivity_summary">How sensitive is the swipe gesture to induce a navigation</string>
	<string-array name="settings_key_swipe_sensitivity_texts">
    	<item>Very high</item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
        <item>Very low</item>
    </string-array>
    
    <string name="preference_volume_step">Volume step</string>
	<string name="preference_volume_step_summary">How big is the volume change on volume key press</string>
	<string-array name="settings_key_volume_step_size_texts">
    	<item>2%</item>
        <item>5%</item>
        <item>10%</item>
        <item>15%</item>
        <item>20%</item>
    </string-array>
    
    <string name="preference_handle_back_hard">Use physical BACK</string>
    <string name="preference_handle_back_hard_on">Pressing BACK will send it to the server</string>
    <string name="preference_handle_back_hard_off">Pressing BACK will be passed to Android</string>
    
    <string name="keep_screen_on_title">Keep screen on</string>
    <string name="keep_screen_on_yes">Screen will no go to sleep (drains battery!)</string>
    <string name="keep_screen_on_no">Screen will go to sleep on inactivity</string>
    
    <string name="network_group">Network Settings</string>
    
    <string name="network_timeout_title">Network timeout</string>
    <string name="network_timeout_summary">Timeout for HTTP requests in milliseconds</string>
    <string name="is_an_invalid_number"><xliff:g id="new_text">%s</xliff:g> is an invalid number</string>
    
    <string name="network_username_title">Username</string>
    <string name="network_username_summary">Username to use as Boxee credentials. Usually \'boxee\'!</string>
    <string name="network_password_title">Password</string>
    <string name="network_password_summary">Password to use as Boxee credentials</string>
    
    <!-- help -->
    <string name="welcome_to_remote">Welcome to Boxee Thumb Remote!</string>
    <string name="quick_overview">This is the simplest WiFi remote for Boxee you\'ll find!\nWith only your thumb, you can control your Boxee. You don\'t even have to look at the remote app UI!</string>
    <string name="swipe_help_overview">Navigation with this remote is done by swipe gestures: swipe your thumb up, to navigate up in Boxee. Swipe down to navigate down, etc. Tap to select an item in Boxee.\nSimple, ah?</string>
    <string name="other_features_overview">There are other features too:\n * Auto detection of a Boxee server.\n * Physical BACK button can be mapped to Boxee\'s BACK (set in app settings).\n * Android soft-keyboard will send keys to Boxee, e.g., when there is a text-box open in Boxee.\n * Automatically pauses a playing video upon a phone call!\n * And more!</string>
    <string name="how_to_get_to_help">There are some settings (at the title, see it?). And more is hiding at the MENU.</string>
    <string name="close_button">Close</string>
    
    
    <!-- remote menu -->
	<string name="exit_app">Exit</string>
	<string name="settings">Settings</string>
	<string name="rescan_servers">Rescan for servers</string>
	<string name="help">Help</string>
	 
	<string name="preference_volume_step_size">Volume step</string>
	
	<string name="screen_orientation_title">Screen orientation</string>
	<string name="screen_orientation_summary">Requires app restart to take effect</string>
	
    <string-array name="screen_orientation_types_strings">
        <item>OS Default</item>
        <item>Use sensor</item>
        <item>Portrait</item>
        <item>Landscape</item>
    </string-array>
    
    <string name="new_volume_toast">Volume: <xliff:g id="new_volume">%d</xliff:g></string>
    
    <string name="need_creds_title">Credentials required</string>
	<string name="need_creds_message">The server requires username and password in order to be controlled.\nWould you like to enter them now?</string>
	
	<string name="no_server_found_title">No server found</string>
	<string name="no_server_found_message">I was unable to find a Boxee server in your network.\n\nWould you like to manually set an IP address? Or maybe have me rescan again?</string>
	<string name="no_server_found_action_manual">Manual</string>
	<string name="no_server_found_action_rescan">Rescan</string>
	<string name="no_server_found_action_neither">Neither</string>
	
	<string name="discoverying_dialog_title"></string>
	<string name="discoverying_dialog_message">Looking for a server…</string>
	
	<string name="slide_to_time">Seek to:</string>
	
	<string name="pause_on_call_title">Pause media on call</string>
	<string name="pause_on_call_yes">Incoming phone calls will pause running media</string>
	<string name="pause_on_call_no">Media will continue to run</string>
	<string name="servers">Servers</string>
</resources>
