<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_servers"
        android:icon="@drawable/ic_action_servers"
        android:orderInCategory="99"
        android:showAsAction="ifRoom"
        android:title="@string/servers">
        <menu>
            <group android:checkableBehavior="single" android:visible="true" android:enabled="true" android:menuCategory="container" android:id="@+id/servers_group">
                
            </group>
        </menu>
    </item>
    
    <item
        android:id="@+id/menu_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/settings"/>
    
    <item
        android:id="@+id/menu_help"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/help"/>
    
    <item
        android:id="@+id/menu_rescan_servers"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/rescan_servers"/>
    
    <item
        android:id="@+id/menu_exit_app"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/exit_app"/>
    
</menu>