<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
    <ScrollView android:layout_width="wrap_content" android:layout_height="0px" android:layout_weight="1">
    	<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:orientation="vertical">
	    	<TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
		    	android:layout_marginLeft="8dp" android:layout_marginRight="8dp"
		    	android:text="@string/quick_overview" android:textSize="16sp"/>
		    	
		    <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="4dp"
		    	android:scaleType="centerInside" android:adjustViewBounds="true" android:src="@drawable/help_swipe_image" android:layout_gravity="center_horizontal"/>
		    
			<TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
		    	android:layout_marginLeft="8dp" android:layout_marginRight="8dp"
		    	android:text="@string/swipe_help_overview" android:textSize="16sp"/>
		    
		    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
		    	android:layout_margin="8dp"
		    	android:text="@string/other_features_overview" android:textSize="16sp"/>
		    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
		    	android:layout_marginLeft="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
		    	android:text="@string/how_to_get_to_help" android:textSize="16sp"/>
    	</LinearLayout>
    </ScrollView>
    
    <LinearLayout android:layout_width="fill_parent" android:layout_alignParentBottom="true"
	    android:layout_height="wrap_content" android:padding="4dp"
	    android:orientation="horizontal" android:weightSum="2" android:background="#555">
	    <Button android:layout_height="wrap_content" android:layout_width="0px" android:layout_weight="1" android:onClick="onCloseClicked"  android:padding="8dp"
			android:gravity="center" android:layout_gravity="center" android:text="@string/close_button"/>
	</LinearLayout>
    	
</LinearLayout>
    
